k8s/l3gl-devops.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-api
  namespace: devops-l3gl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: task-api
  template:
    metadata:
      labels:
        app: task-api
    spec:
      containers:
      - name: task-api
        image: bachirsarr123/task-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8085
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8085
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8085
          initialDelaySeconds: 30
          periodSeconds: 10
        resources:
          requests:
            cpu: 200m
            memory: 250Mi
          limits:
            cpu: 400m
            memory: 500Mi
---
apiVersion: v1
kind: Service
metadata:
  name: task-api-service
  namespace: devops-l3gl
spec:
  selector:
    app: task-api
  ports:
    - protocol: TCP
      port: 8085
      targetPort: 8085
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-api-ingress
  namespace: devops-l3gl
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: task-api-service
            port:
              number: 8085
